--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr size='3'>
     <br>
   <ul>
-  <li><a href="L:\web development\first website\BIOGRAPHY.HTML"><em>hobbies</em></a></li>
+  <li><a href="L:\web development\first website\hobbies.HTML"><em>hobbies</em></a></li>
   </ul>
   <br>
 <hr size='3'>
