--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr size='3'>
     <br>
   <ul>
-  <li><a href="L:\web development\first website\hobbies.HTML"><em>hobbies</em></a></li>
+  <li><a href="hobbies.html"><em>hobbies</em></a></li>
   </ul>
   <br>
 <hr size='3'>
@@ -37,6 +37,6 @@
   </table>
   <hr size='3'>
   <h3>contact info</h3>
-  <a href="L:\web development\contact.html"><strong> contact </strong>/a>
+  <a href="contact.html"><strong> contact </strong>/a>
   </body>
 </html>
